[package]
name = "docs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
actix-web-static-files = "4.0.1"
clap = "4.5.39"
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
